Retry time-based offset fetching to account for timeindex delays
Signed-off-by: Michael Edgar <medgar@redhat.com>