@@ -5,9 +5,9 @@ import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 
-import org.apache.kafka.common.config.TopicConfig;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -23,6 +23,7 @@ import io.streamshub.clik.kafka.TopicService;
 import io.streamshub.clik.test.ClikMainTestBase;
 import io.streamshub.clik.test.TestRecordProducer;
 
+import static org.awaitility.Awaitility.await;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -209,49 +210,49 @@ class TopicCommandTest extends ClikMainTestBase implements TestRecordProducer {
         "'2025-01-01T00:00:00Z'   , '0,1'        , 0,  0,  0", // 0 & 1 are 1970-01-01T00:00:00Z and 1970-01-01T00:00:00.001Z
     })
     void testDescribeTopicWithOffsets(String offsets1, String offsets2, String expected1, String expected2, String expected3) throws Exception {
-        topicService.createTopic(admin(), "describe-offsets", 10, 1, Map.of(
-                // Increase frequency of indexing
-                TopicConfig.INDEX_INTERVAL_BYTES_CONFIG, "1024"
-        ));
+        topicService.createTopic(admin(), "describe-offsets", 10, 1, Collections.emptyMap());
         var baseTime = Instant.now().minus(Duration.ofDays(101));
 
         produceMessagesWithTimestamps("describe-offsets", 100,
                 baseTime.toEpochMilli(),
                 Duration.ofDays(1).toMillis());
 
-        LaunchResult result = launcher.launch(
-                "topic", "describe", "describe-offsets",
-                "--offsets", offsets1,
-                "--offsets", offsets2
-        );
-        assertEquals(0, result.exitCode());
-        List<String> output = result.getOutputStream();
-        int start = output.indexOf("Partition Details:") + 2;
-        int p = 0;
+        // Retry for several seconds. The timeindex may not immediately be updated after producing messages
+        await().atMost(10, TimeUnit.SECONDS).untilAsserted(() -> {
+            LaunchResult result = launcher.launch(
+                    "topic", "describe", "describe-offsets",
+                    "--offsets", offsets1,
+                    "--offsets", offsets2
+            );
+            assertEquals(0, result.exitCode());
+            List<String> output = result.getOutputStream();
+            int start = output.indexOf("Partition Details:") + 2;
+            int p = 0;
 
-        for (int l = start; l < output.size(); l++) {
-            String partitionLine = output.get(l);
-            assertTrue(partitionLine.matches(
-                    "^"         // start of line
-                    + "\\s+"    // variable whitespace
-                    + (p++)     // partition#
-                    + "\\s+"    // variable whitespace
-                    + "1"       // leader
-                    + "\\s+"    // variable whitespace
-                    + "\\[1\\]" // replicas
-                    + "\\s+"    // variable whitespace
-                    + "\\[1\\]" // ISR
-                    + "\\s+"    // variable whitespace
-                    + expected1 // expected offset 1
-                    + "\\s+"    // variable whitespace
-                    + expected2 // expected offset 2
-                    + "\\s+"    // variable whitespace
-                    + expected3 // expected offset 3
-                    + "\\s*"    // maybe variable whitespace
-                    + "$"       // end of line
-                    ), () -> "Partition line did not match: '" + partitionLine +
-                        System.lineSeparator() + "'. Full output: " + result.getOutput());
-        }
+            for (int l = start; l < output.size(); l++) {
+                String partitionLine = output.get(l);
+                assertTrue(partitionLine.matches(
+                        "^"         // start of line
+                        + "\\s+"    // variable whitespace
+                        + (p++)     // partition#
+                        + "\\s+"    // variable whitespace
+                        + "1"       // leader
+                        + "\\s+"    // variable whitespace
+                        + "\\[1\\]" // replicas
+                        + "\\s+"    // variable whitespace
+                        + "\\[1\\]" // ISR
+                        + "\\s+"    // variable whitespace
+                        + expected1 // expected offset 1
+                        + "\\s+"    // variable whitespace
+                        + expected2 // expected offset 2
+                        + "\\s+"    // variable whitespace
+                        + expected3 // expected offset 3
+                        + "\\s*"    // maybe variable whitespace
+                        + "$"       // end of line
+                        ), () -> "Partition line did not match: '" + partitionLine +
+                            System.lineSeparator() + "'. Full output: " + result.getOutput());
+            }
+        });
     }
 
     @Test
